# svetlana_website

./: .gitignore  README.md  manage.py  package-lock.json  package.json  pyproject.toml  webpack.config.js
accounts/: admin.py  models.py  serializers.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
apps/accounts/: admin.py  api.py  apps.py  models.py  serializers.py  urls.py  views.py
apps/accounts/helpers/: functions.py
apps/accounts/migrations/: 0002_alter_user_options.py  0003_auto_20210830_0103.py  0004_userday.py
apps/articles/: admin.py  models.py  serializers.py  urls.py  views.py
apps/articles/migrations/: 0002_article_is_hidden.py  0003_alter_article_name.py  0004_alter_article_name.py
apps/courses/: admin.py  models.py  serializers.py  urls.py  views.py
apps/courses/helpers/: functions.py
apps/courses/migrations/: 0001_initial.py  0004_course_is_hidden.py  (+13 more)
apps/frontend/: urls.py  views.py
apps/others/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
apps/reports/: admin.py  models.py  serializers.py  urls.py  views.py
apps/stuff/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
articles/: admin.py  serializers.py  urls.py  views.py
articles/migrations/: 0001_initial.py
courses/: admin.py  models.py  serializers.py  urls.py  views.py
others/: admin.py  models.py  serializers.py  urls.py  views.py
reports/: admin.py  models.py  serializers.py  urls.py  views.py
reports/migrations/: 0001_initial.py
svetlana_website/: asgi.py  settings.py  urls.py  wsgi.py
users/: models.py
(+105 files in other folders)
